# temp_rust

./: Cargo.toml
src/: main.rs
templates/: base.html.tera  header.html.tera  index.html.tera
